improved handling of unauthorized changes to file on server